--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
-           
+            background-attachment: fixed;
             position: relative;
             overflow: hidden;
         }
@@ -1722,5 +1722,4 @@
         });
     </script>
 </body>
-
 </html>
