--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,7 @@
         </div>
     </div>
 </section>
+        </div>
   <!-- COURSES PAGE -->
 <div id="coursesPage" class="page-content">
     <div class="section-header">
@@ -1739,3 +1740,4 @@
 </body>
 
 </html>
+
