--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
                     <h1>Transform Your Life Through <span>Qur'anic Excellence</span></h1>
                     <div class="hero-buttons">
                         <a href="#" onclick="showPage('register'); return false;" class="btn btn-primary">
-                            Start Free Trial →
+                            Register Now →
                         </a>
                         <a href="#" onclick="showPage('courses'); return false;" class="btn btn-secondary">
                             Explore Courses
@@ -1740,4 +1740,5 @@
 </body>
 
 </html>
+
 
