--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             margin: 0 auto;
             opacity: 0;
             animation: fadeInUp 1s ease forwards 0.3s;
+            margin-top: 20rem;
         }
 
         @keyframes fadeInUp {
@@ -1740,5 +1741,6 @@
 </body>
 
 </html>
+
 
 
