--- a/index.html
+++ b/index.html
@@ -376,15 +376,15 @@
             color: var(--accent);
         }
 
-        .hero p {
-            font-size: 1.3rem;
-            color: rgba(255, 255, 255, 0.95);
-            line-height: 1.8;
-            margin-bottom: 3rem;
-            max-width: 650px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+       .hero p {
+    font-size: 1.3rem;
+    color: rgba(255, 255, 255, 0.95);
+    line-height: 1.8;
+    margin-bottom: 3rem;  /* Reasonable spacing before buttons */
+    max-width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
         .hero-buttons {
             display: flex;
@@ -1741,6 +1741,7 @@
 </body>
 
 </html>
+
 
 
 
