--- a/index.html
+++ b/index.html
@@ -1286,10 +1286,10 @@ nav.scrolled {
             </div>
         </div>
         <div class="image-card">
-            <!-- Tajweed & Recitation -->
+            <!-- Tilaawah Al-Quran (Reciting The Holy Quran) -->
             <img src="tajweed.png" alt="Muslim beautifully reciting the Quran with proper Tajweed" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
             <div class="image-card-content">
-                <h3 class="image-card-title">Tajweed & Recitation</h3>
+                <h3 class="image-card-title">Tilaawah Al-Quran (Reciting The Holy Quran)</h3>
                 <p class="image-card-text">Perfect your recitation with proper Tajweed rules, beautiful pronunciation, authentic Qira'at, and step-by-step guidance from certified instructors.</p>
                 <a href="#" onclick="showPage('register'); return false;" class="btn btn-primary" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 2rem; font-size: 0.9rem;">Register Now →</a>
             </div>
