--- a/index.html
+++ b/index.html
@@ -715,48 +715,56 @@ nav.scrolled {
             right: 0;
         }
 
-        /* Registration Form */
-        .registration-section {
-            background: var(--primary-dark);
-            padding: 5rem 2rem;
-        }
+       /* Registration Form - Compact Version */
+.registration-section {
+    background: var(--primary-dark);
+    padding: 3rem 1.5rem; /* reduced from 5rem 2rem */
+}
 
-        .registration-container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
+.registration-container {
+    max-width: 900px;
+    margin: 0 auto;
+}
 
-        .registration-header {
-            text-align: center;
-            color: white;
-            margin-bottom: 3rem;
-        }
+.registration-header {
+    text-align: center;
+    color: white;
+    margin-bottom: 2rem; /* reduced from 3rem */
+}
 
-        .registration-header h2 {
-            font-size: 3rem;
-            font-weight: 900;
-            margin-bottom: 1rem;
-        }
+.registration-header h2 {
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 1rem;
+}
 
-        .registration-header p {
-            font-size: 1.2rem;
-            opacity: 0.9;
-        }
+.registration-header p {
+    font-size: 1.2rem;
+    opacity: 0.9;
+}
 
-        .form-container {
-            background: white;
-            border-radius: 25px;
-            overflow: hidden;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-        }
+.form-container {
+    background: white;
+    border-radius: 25px;
+    overflow: hidden;
+    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+}
 
-        .form-container iframe {
-            width: 100%;
-            min-height: 1400px;
-            border: none;
-            display: block;
-            background: white;
-        }
+.form-container iframe {
+    width: 100%;
+    height: 850px; /* reduced from 1400px */
+    border: none;
+    display: block;
+    background: white;
+}
+
+/* Mobile-friendly adjustment */
+@media (max-width: 768px) {
+    .form-container iframe {
+        height: 950px; /* slightly taller on smaller screens */
+    }
+}
+
 
         .whatsapp-prompt {
             background: linear-gradient(135deg, #25D366, #128C7E);
@@ -1463,6 +1471,17 @@ nav.scrolled {
         </div>
         <div class="image-card">
             <!-- Sheikh Bashir Buvumbo - Qur’an Specialist -->
+            <img src="https://media.istockphoto.com/id/1089060004/photo/arab-teacher-posing-on-blackboard.jpg?s=612x612&w=0&k=20&c=xSygM-5shne8pujYlt_Asock-UXRMYVXYe1VSI3emhw=" alt="Sheikh Ibrahim, Arabic Language Specialist" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
+            <div class="image-card-content">
+                <h3 class="image-card-title">Sheikh Bashir Buvumbo</h3>
+                <p style="color: var(--primary-dark); font-weight: 700; margin-bottom: 0.8rem;">Qur’an Specialist</p>
+                <p class="image-card-text">A highly experienced teacher specializing in Qur’an recitation, Tajwīd, and memorization, dedicated to helping students read and understand the Qur’an correctly and confidently.</p>
+            </div>
+        </div>
+    </div>
+
+      <div class="image-card">
+            <!-- Sheikh Usaama Ssegujja - Qur’an Specialist -->
             <img src="https://media.istockphoto.com/id/1089060004/photo/arab-teacher-posing-on-blackboard.jpg?s=612x612&w=0&k=20&c=xSygM-5shne8pujYlt_Asock-UXRMYVXYe1VSI3emhw=" alt="Sheikh Ibrahim, Arabic Language Specialist" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
             <div class="image-card-content">
                 <h3 class="image-card-title">Sheikh Bashir Buvumbo</h3>
