--- a/index.html
+++ b/index.html
@@ -1484,7 +1484,7 @@ nav.scrolled {
             <!-- Sheikh Usaama Ssegujja - Qur’an Specialist -->
             <img src="https://media.istockphoto.com/id/1089060004/photo/arab-teacher-posing-on-blackboard.jpg?s=612x612&w=0&k=20&c=xSygM-5shne8pujYlt_Asock-UXRMYVXYe1VSI3emhw=" alt="Sheikh Ibrahim, Arabic Language Specialist" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
             <div class="image-card-content">
-                <h3 class="image-card-title">Sheikh Bashir Buvumbo</h3>
+                <h3 class="image-card-title">Sheikh Usaama Ssegujja</h3>
                 <p style="color: var(--primary-dark); font-weight: 700; margin-bottom: 0.8rem;">Qur’an Specialist</p>
                 <p class="image-card-text">A highly experienced teacher specializing in Qur’an recitation, Tajwīd, and memorization, dedicated to helping students read and understand the Qur’an correctly and confidently.</p>
             </div>
@@ -1796,3 +1796,4 @@ nav.scrolled {
 </body>
 
 </html>
+
