--- a/index.html
+++ b/index.html
@@ -1451,15 +1451,18 @@ nav.scrolled {
 
     <h3 style="text-align: center; font-size: 2.5rem; font-weight: 900; margin-bottom: 3rem;">Meet Our Expert Team</h3>
     <div class="grid-3">
-        <div class="image-card">
-            <!-- Sheikh Abdulsalaam Abbas Ssenkindu - Arabic Language Specialist -->
-            <img src="abdulsalaam.png" alt="Sheikh Saham, Founder and Director of Saham Academy" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
+
+               <div class="image-card">
+              <!-- Sheikh Abdulsalaam Abbas Ssenkindu - Arabic Language Specialist -->
+            <img src="abdulsalaam.png" alt="Sheikh Abdulsalaam Founder and Director of Saham Academy" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
             <div class="image-card-content">
                 <h3 class="image-card-title">Sheikh Abdulsalaam Abbas Ssenkindu</h3>
-                <p style="color: var(--primary-dark); font-weight: 700; margin-bottom: 0.8rem;">Arabic Language Specialist</p>
+                <p style="color: var(--primary-dark); font-weight: 700; margin-bottom: 0.8rem;">Arabic specialist</p>
                 <p class="image-card-text"A skilled instructor in Arabic language, helping students understand Qur’anic Arabic through structured lessons in reading, vocabulary, and basic grammar.</p>
             </div>
         </div>
+
+    
         <div class="image-card">
             <!-- Sheikh Hashim Muhammad Bbanja - Hadith specialist -->
             <img src="hashim.jpeg" alt="Sheikh Ahmed, Senior Tajweed Instructor" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
@@ -1471,7 +1474,7 @@ nav.scrolled {
         </div>
         <div class="image-card">
             <!-- Sheikh Bashir Buvumbo - Qur’an Specialist -->
-            <img src="https://media.istockphoto.com/id/1089060004/photo/arab-teacher-posing-on-blackboard.jpg?s=612x612&w=0&k=20&c=xSygM-5shne8pujYlt_Asock-UXRMYVXYe1VSI3emhw=" alt="Sheikh Ibrahim, Arabic Language Specialist" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
+            <img src="bashir.jpeg" alt="Sheikh Ibrahim, Arabic Language Specialist" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px 8px 0 0;">
             <div class="image-card-content">
                 <h3 class="image-card-title">Sheikh Bashir Buvumbo</h3>
                 <p style="color: var(--primary-dark); font-weight: 700; margin-bottom: 0.8rem;">Qur’an Specialist</p>
