--- a/index.html
+++ b/index.html
@@ -1553,18 +1553,20 @@
                 </div>
                 <div style="max-width: 1200px; margin: 0 auto;">
                     <div class="grid-3">
-                        <div class="image-card">
-                            <img src="quran-memorization.png" alt="Student memorizing Quran with guidance in Hifz program" loading="lazy">
-                            <div class="image-card-content">
-                                <h3 class="image-card-title">Qur'an Memorisation (Hifdh)</h3>
-                                <p class="image-card-text">Master Qur'an memorization with proven techniques, daily practice sessions, and personalized feedback from experienced Hafidhs.</p>
-                            </div>
-                        </div>
+                       <div class="image-card">
+                    <img src="quran-memorization.png" alt="Student engaged in online Quran Hifz memorization program" loading="lazy">
+                    <div class="image-card-content">
+                        <h3 class="image-card-title">Qur'an Memorisation (Hifdh)</h3>
+                        <p class="image-card-text">Master Qur'an memorization with proven techniques, daily practice sessions, regular revision schedules, and personalized feedback from experienced Hafidhs with Ijazah.</p>
+                        <a href="#" onclick="showPage('register'); return false;" class="btn btn-primary" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 2rem; font-size: 0.9rem;" aria-label="Register for Hifdh Course">Register Now →</a>
+                    </div>
+                </div>
                         <div class="image-card">
                             <img src="tajweed.png" alt="Muslim reciting Quran with proper Tajweed" loading="lazy">
                             <div class="image-card-content">
                                 <h3 class="image-card-title">Tajweed & Recitation</h3>
                                 <p class="image-card-text">Perfect your recitation with proper Tajweed rules, beautiful pronunciation, and authentic Qira'at from certified instructors.</p>
+                             <a href="#" onclick="showPage('register'); return false;" class="btn btn-primary" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 2rem; font-size: 0.9rem;" aria-label="Register for Hifdh Course">Register Now →</a>
                             </div>
                         </div>
                         <div class="image-card">
@@ -1572,6 +1574,7 @@
                             <div class="image-card-content">
                                 <h3 class="image-card-title">Arabic Language</h3>
                                 <p class="image-card-text">Learn classical Arabic to understand the Qur'an deeply, from basic reading to advanced grammar and vocabulary.</p>
+                             <a href="#" onclick="showPage('register'); return false;" class="btn btn-primary" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 2rem; font-size: 0.9rem;" aria-label="Register for Hifdh Course">Register Now →</a>
                             </div>
                         </div>
                     </div>
