--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saham Qur'an Academy - Excellence in Islamic Education</title>
-    
+
+    <meta name="robots" content="index, follow">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Saham Qur'an Academy - Excellence in Islamic Education. Learn Quran memorization, Tajweed, Arabic language online with certified teachers from Uganda to worldwide.">
     <meta name="keywords" content="Quran academy, online Quran classes, Hifdh program, Tajweed lessons, Arabic language, Islamic education, Uganda Quran school">
@@ -2688,6 +2689,8 @@
         <i class="fab fa-whatsapp" style="font-size: 28px; color: white;"></i>
     </a>
 
+      <a href="/sitemap.html" style="display: none;">Sitemap</a>
+    
     <script>
         // ========== GLOBAL STATE ==========
         let currentTestimonial = 0;
@@ -3108,3 +3111,4 @@
     </script>
 </body>
 </html>
+
