--- a/index.html
+++ b/index.html
@@ -1843,14 +1843,14 @@
                 <img src="logo2.png" alt="Saham Academy Logo" class="logo-icon">
                 <span>SAHAM ACADEMY</span>
             </div>
-            <ul class="nav-links">
-                <li><a href="#" onclick="showPage('home'); return false;" aria-label="Home Page">Home</a></li>
-                <li><a href="#" onclick="showPage('courses'); return false;" aria-label="Courses Page">Courses</a></li>
-                <li><a href="#" onclick="showPage('pricing'); return false;" aria-label="Pricing Page">Pricing</a></li>
-                <li><a href="#" onclick="showPage('about'); return false;" aria-label="About Page">About</a></li>
-                <li><a href="#" onclick="showPage('register'); return false;" aria-label="Registration Page">Register</a></li>
-                <li><a href="#" onclick="showPage('contact'); return false;" aria-label="Contact Page">Contact</a></li>
-            </ul>
+         <ul class="nav-links">
+    <li><a href="https://sahamquran.academy/" onclick="showPage('home'); return false;" aria-label="Home Page">Home</a></li>
+    <li><a href="https://sahamquran.academy/courses" onclick="showPage('courses'); return false;" aria-label="Courses Page">Courses</a></li>
+    <li><a href="https://sahamquran.academy/pricing" onclick="showPage('pricing'); return false;" aria-label="Pricing Page">Pricing</a></li>
+    <li><a href="https://sahamquran.academy/about" onclick="showPage('about'); return false;" aria-label="About Page">About</a></li>
+    <li><a href="https://sahamquran.academy/register" onclick="showPage('register'); return false;" aria-label="Registration Page">Register</a></li>
+    <li><a href="https://sahamquran.academy/contact" onclick="showPage('contact'); return false;" aria-label="Contact Page">Contact</a></li>
+</ul>
             <div class="mobile-toggle" id="mobileToggle" onclick="toggleMobileMenu()" aria-label="Toggle Mobile Menu" role="button" tabindex="0">
                 <span></span>
                 <span></span>
@@ -1868,14 +1868,14 @@
             </div>
             <div class="mobile-close" onclick="closeMobileMenu()" aria-label="Close Menu" role="button" tabindex="0">✕</div>
         </div>
-        <ul>
-            <li><a href="#" onclick="showPage('home'); closeMobileMenu();">Home</a></li>
-            <li><a href="#" onclick="showPage('courses'); closeMobileMenu();">Courses</a></li>
-            <li><a href="#" onclick="showPage('pricing'); closeMobileMenu();">Pricing</a></li>
-            <li><a href="#" onclick="showPage('about'); closeMobileMenu();">About</a></li>
-            <li><a href="#" onclick="showPage('register'); closeMobileMenu();">Register</a></li>
-            <li><a href="#" onclick="showPage('contact'); closeMobileMenu();">Contact</a></li>
-        </ul>
+       <ul>
+    <li><a href="https://sahamquran.academy/" onclick="showPage('home'); closeMobileMenu();">Home</a></li>
+    <li><a href="https://sahamquran.academy/courses" onclick="showPage('courses'); closeMobileMenu();">Courses</a></li>
+    <li><a href="https://sahamquran.academy/pricing" onclick="showPage('pricing'); closeMobileMenu();">Pricing</a></li>
+    <li><a href="https://sahamquran.academy/about" onclick="showPage('about'); closeMobileMenu();">About</a></li>
+    <li><a href="https://sahamquran.academy/register" onclick="showPage('register'); closeMobileMenu();">Register</a></li>
+    <li><a href="https://sahamquran.academy/contact" onclick="showPage('contact'); closeMobileMenu();">Contact</a></li>
+</ul>
     </div>
 
     <!-- Main Content -->
@@ -3111,4 +3111,5 @@
     </script>
 </body>
 </html>
+
 
