--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="fragment" content="!">
     <title>Saham Qur'an Academy - Excellence in Islamic Education</title>
 
     <meta name="robots" content="index, follow">
@@ -3111,5 +3112,6 @@
     </script>
 </body>
 </html>
+
 
 
