--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="fragment" content="!">
+    <link rel="canonical" href="https://sahamquran.academy/">
     <title>Saham Qur'an Academy - Excellence in Islamic Education</title>
 
     <meta name="robots" content="index, follow">
@@ -3130,3 +3131,4 @@
     </script>
 </body>
 </html>
+
