--- a/index.html
+++ b/index.html
@@ -5,25 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="fragment" content="!">
     <link rel="canonical" href="https://sahamquran.academy/">
+
+    <!-- Title for Google and browser tab -->
     <title>Saham Qur'an Academy - Excellence in Islamic Education</title>
 
-    <meta name="robots" content="index, follow">
     <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Saham Qur'an Academy - Excellence in Islamic Education. Learn Quran memorization, Tajweed, Arabic language online with certified teachers from Uganda to worldwide.">
     <meta name="keywords" content="Quran academy, online Quran classes, Hifdh program, Tajweed lessons, Arabic language, Islamic education, Uganda Quran school">
     <meta name="author" content="Saham Qur'an Academy">
-    
-    <!-- Open Graph Tags -->
+
+    <!-- Open Graph Tags (for social media sharing) -->
     <meta property="og:title" content="Saham Qur'an Academy - Excellence in Islamic Education">
     <meta property="og:description" content="Transform your life through Quranic excellence with certified teachers from Uganda.">
     <meta property="og:type" content="website">
-    
+    <meta property="og:url" content="https://sahamquran.academy/">
+    <meta property="og:image" content="https://sahamquran.academy/logo3.png">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://sahamquran.academy/logo3.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://sahamquran.academy/logo3.png">
+    <link rel="shortcut icon" href="https://sahamquran.academy/logo3.ico" type="image/x-icon">
+
+    <!-- Structured Data for Google Logo -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Saham Qur'an Academy",
+      "url": "https://sahamquran.academy",
+      "logo": "https://sahamquran.academy/logo3.png"
+    }
+    </script>
+
     <!-- Preload Critical Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="image" href="hero-bg.jpg">
+
+    <!-- Fonts & Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="logo3.png">
+
     <style>
         /* ALL YOUR EXISTING CSS STAYS THE SAME UNTIL HERO SECTION */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
